...
                        onLongClickLabel = stringResource(R.string.nav_switch_account),
                        content = { avatarModifier ->
                            val sizedAvatar = avatarModifier.size(30.dp)
                            if (account != null) {
                                AccountAvatar(
                                    account,
                                    sizedAvatar.testTag("wide_navigation_profile_avatar"),
                                    exposeSemantics = false,
                                )
                            } else {
                                Avatar(sizedAvatar, description = null)
                            }
                        },
...
                        val selectedOffset = (gap + (targetSize + gap) * selectedPosition).roundToInt() +
                            (targetSize - indicatorSize) / 2
                        if (orientation == Orientation.Horizontal) IntOffset(selectedOffset, 0)
                        else IntOffset(0, selectedOffset)
                    }
                    .size(40.dp)
                    .testTag("selected_navigation_indicator"),
                shape = BeelineBubbleShape,
                color = MaterialTheme.colorScheme.secondaryContainer,
            ) {}
            content()
        }
    }
...
